--- a/contrib/gitian-descriptors/README
+++ b/contrib/gitian-descriptors/README
@@ -1,7 +1,6 @@
 Download a 64bit debian netinstall iso from : http://cdimage.debian.org/debian-cd/
 I used debian-8.1.0-amd64-netinst.iso
 
-
 Follow this guide part way:
 https://github.com/bitcoin/bitcoin/blob/master/doc/gitian-building.md#setting-up-debian-for-gitian-building
 ( up to cloning gitian-builder ) 
@@ -23,8 +22,6 @@ File location and size: 40GB (20GB should work)
 After creating the VM, we need to configure it.
 
     Click the Settings button, then go to the Network tab. Adapter 1 should be attached to NAT
-
-
 
     Click Advanced, then Port Forwarding. We want to set up a port through which we can reach the VM to get files in and out.
     Create a new rule by clicking the plus icon.
@@ -63,26 +60,21 @@ Select disk to partition: SCSI1 (0,0,0)
 Partitioning scheme: All files in one partition 
 Finish partitioning and write changes to disk -> Yes
 
-
 The base system will be installed, this will take a minute or so
     Choose a mirror (any will do - preferably one that is close to you and you should get the best download speeds)
 
 Enter proxy information (unless you are on an intranet, you can leave this empty)
 
-
 Wait a bit while 'Select and install software' runs
 Participate in popularity contest -> No
     Choose software to install. We need just the base system. Make sure only 'SSH server' and 'Standard System Utilities' are checked. Uncheck 'Debian Desktop Environment' and 'Print Server'
 
-
 Install the GRUB boot loader to the master boot record? -> Yes
-
 
 Installation Complete -> Continue
 After installation, the VM will reboot and you will have a working Debian VM.
 
 Congratulations!
-
 
 On your debian virtual machine log in as root and run the following commands to get the show on the road.
 
@@ -111,7 +103,6 @@ echo 'export USE_LXC=1' >> /home/debian/.profile
 echo 'export GITIAN_HOST_IP=10.0.3.2' >> /home/debian/.profile
 echo 'export LXC_GUEST_IP=10.0.3.5' >> /home/debian/.profile
 
-
 reboot 
 
 The debian box will be rebooted and our setup should be complete
@@ -122,7 +113,7 @@ The debian box will be rebooted and our setup should be complete
 ssh debian@localhost -p 22222
 
 git clone https://github.com/devrandom/gitian-builder.git
-git clone https://github.com/LEODev/Capricoin
+git clone https://github.com/Capricoinofficial/Capricoin
 
 cd gitian-builder
 
@@ -146,7 +137,6 @@ wget https://sourceforge.net/projects/libpng/files/libpng16/older-releases/1.6.1
 wget https://github.com/phracker/MacOSX-SDKs/releases/download/MacOSX10.11.sdk/MacOSX10.9.sdk.tar.xz
 
 Mirror - http://mindstalk.net/host/boost-mingw-gas-cross-compile-2013-03-03.patch 
-
 
 $ cd ..;
 $ LXC_EXECUTE=lxc-execute; PATH="$(pwd)/libexec/:$PATH";
@@ -195,13 +185,6 @@ Notes:
         or
         tail -f var/build.log
 
-
-
-
-
-
-
-
 Gavin's notes on getting gitian builds up and running:
 
 You need the right hardware: you need a 64-bit-capable CPU with hardware virtualization support (Intel VT-x or AMD-V). Not all modern CPUs support hardware virtualization.
@@ -217,7 +200,7 @@ Sanity checks:
 
 Once you've got the right hardware and software:
 
-    git clone git://github.com/bitcoin/bitcoin.git
+    git clone git://github.com/Capricoinofficial/Capricoin.git
     git clone git://github.com/devrandom/gitian-builder.git
     mkdir gitian-builder/inputs
     wget 'http://miniupnp.tuxfamily.org/files/download.php?file=miniupnpc-1.6.tar.gz' -O gitian-builder/inputs/miniupnpc-1.6.tar.gz
@@ -228,9 +211,9 @@ Once you've got the right hardware and software:
     cd ..
 
     # To build
-    cd bitcoin
+    cd Capricoin
     git pull
     cd ../gitian-builder
     git pull
-    ./bin/gbuild --commit bitcoin=HEAD ../bitcoin/contrib/gitian.yml
+    ./bin/gbuild --commit Capricoin=HEAD ../Capricoin/contrib/gitian-win.yml
 
