--- a/doc/README
+++ b/doc/README
@@ -1,7 +1,9 @@
-Capricoin 0.4.4 BETA
+Capricoin 1.2.0.0
 
-Copyright (c) 2013 NovaCoin Developers
+Copyright (c) 2015-2019 Capricoin Developers
+Copyright (c) 2013-2014 NovaCoin Developers
 Copyright (c) 2011-2012 PPCoin Developers
+Copyright (c) 2009-2014 Bitcoin Developers
 Distributed under the MIT/X11 software license, see the accompanying
 file license.txt or http://www.opensource.org/licenses/mit-license.php.
 This product includes software developed by the OpenSSL Project for use in
